Bug 1057061 - Handle timer lifetime outlasting WebGLContext. r=kamidphish, a=sledru